frontend/deploy/mainnet_selfHostedMongo.yml
kind: Service
apiVersion: v1
metadata:
  name: mongodb
  namespace: dcx-mainnet
spec:
  clusterIP: None
  ports:
    - port: 27017
  selector:
    app: mongodb

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-node
  namespace: dcx-mainnet
spec:
  serviceName: mongodb
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb-node
          image: mongo:4.4
          command: ["/usr/bin/mongod", "--replSet", "rs0", "--bind_ip_all"]

          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"

          volumeMounts:
            - mountPath: "/data/db"
              name: mongo-data
          ports:
            - containerPort: 27017

  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
