frontend/deploy/toPreRelease.k8-template.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: dcx-prerelease
spec:
  selector:
    matchLabels:
      app: rabbitmq
  serviceName: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - image: masstransit/rabbitmq
          name: rabbitmq

          ports:
            - containerPort: 5672
            - containerPort: 15672

          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq

  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: dcx-prerelease
spec:
  ports:
    - port: 5672
  selector:
    app: rabbitmq
  clusterIP: None


---

kind: Service
apiVersion: v1
metadata:
  name: mongodb
  namespace: dcx-prerelease
spec:
    clusterIP: None
    ports:
    -   port: 27017
    selector:
        app: mongodb

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mongodb-node
    namespace: dcx-prerelease
spec:
  serviceName: mongodb
  selector:
    matchLabels:
        app: mongodb
  replicas: 1
  template:
    metadata:
        labels:
            app: mongodb
    spec:
        containers:
        -   name: mongodb-node
            image: mongo:4.4
            command: [ "/usr/bin/mongod", "--replSet", "rs0", "--bind_ip_all" ]
            volumeMounts:
            -   mountPath: "/data/db"
                name: mongo-data
            ports:
            -   containerPort: 27017
       
        
  volumeClaimTemplates:
  - metadata:
        name: mongo-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---

apiVersion: apps/v1
kind: Deployment
metadata:
    name: dcx-server
    namespace: dcx-prerelease
    labels:
      app: dcx-server

spec:
  selector:
    matchLabels:
        app: dcx-server
  replicas: 2
  template:

    metadata:
        labels:
            app: dcx-server
    spec:

        imagePullSecrets:
        - name: newearthcb-azurecr

        containers:
        -   name: dcx-server
            image: newearthcb.azurecr.io/dcx-server:__TAG__SERVER
---

apiVersion: apps/v1
kind: Deployment
metadata:
    name: dcx-web
    namespace: dcx-prerelease
    labels:
      app: dcx-web

spec:
  selector:
    matchLabels:
        app: dcx-web
  replicas: 2
  template:

    metadata:
        labels:
            app: dcx-web
    spec:

        imagePullSecrets:
        - name: newearthcb-azurecr

        containers:
        -   name: dcx-web
            image: newearthcb.azurecr.io/dcx-web:__TAG__FRONTEND
---

apiVersion: v1
kind: Service
metadata:
    name: dcx-server
    namespace: dcx-prerelease
spec:
    ports:
    -   name: http 
        port: 80
    selector:
        app: dcx-server

---

apiVersion: v1
kind: Service
metadata:
    name: dcx-web
    namespace: dcx-prerelease
spec:
    ports:
    -   name: http 
        port: 3000
    selector:
        app: dcx-web

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dcx-prerelease-ingress-all
  namespace: dcx-prerelease
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
      - alpha.staging.dragonscrossing.com
      secretName: dcx-prerelease-tls-main

  rules:
  - host: alpha.staging.dragonscrossing.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dcx-web
            port: 
              number: 3000
      
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: dcx-server
            port: 
              number: 80

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: dcx-prerelease
spec:
  selector:
    matchLabels:
      app: elasticsearch
  serviceName: elasticsearch
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - image: docker.elastic.co/elasticsearch/elasticsearch:8.6.0
          name: elasticsearch
          securityContext:
            privileged: true
            runAsUser: 1000
            capabilities:
              add:
                - IPC_LOCK
                - SYS_RESOURCE

          ports:
            - containerPort: 9200

          volumeMounts:
            - name: elasticsearch-data
              mountPath: /usr/share/elasticsearch/data

          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /_cluster/health?local=true
              port: 9200
            initialDelaySeconds: 5

#          resources:
#            requests:
#              memory: "500Mi"

  volumeClaimTemplates:
    - metadata:
        name: elasticsearch-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 6Gi

---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: dcx-prerelease
spec:
  ports:
    - port: 9200
  selector:
    app: elasticsearch
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: dcx-prerelease
  labels:
    app: kibana
spec:
  selector:
    matchLabels:
      app: kibana
  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - image: docker.elastic.co/kibana/kibana:8.6.0
          name: kibana
          ports:
            - containerPort: 5601
      volumes:
        - name: kibana-data
          persistentVolumeClaim:
            claimName: kibana-data-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: dcx-prerelease
spec:
  ports:
    - port: 5601
  selector:
    app: kibana
  clusterIP: None

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dcx-kibana-staging-ingress
  namespace: dcx-prerelease
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - coreDevOnly'
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
      - kibana-alpha.staging.dragonscrossing.com
      secretName: dcx-staging-tls-kibana-alpha

  rules:
  - host: kibana-alpha.staging.dragonscrossing.com
    http:
      paths:

      - pathType: Exact
        path: "/"
        backend:
          service:
            name: kibana
            port: 
              number: 5601

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dcx-staging-ingress-kibana-all
  namespace: dcx-prerelease
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
      - kibana-alpha.staging.dragonscrossing.com
      secretName: dcx-staging-tls-kibana-alpha

  rules:
  - host: kibana-alpha.staging.dragonscrossing.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kibana
            port: 
              number: 5601
      


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: dcx-prerelease
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis:6.2-alpine

          name: redis
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: dcx-prerelease
spec:
  ports:
    - port: 6379
  selector:
    app: redis
  clusterIP: None
